--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -17,7 +17,6 @@ on:
 # Global environment variables available to all jobs
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository | lower }}  # Repository name (owner/repo) - convert to lowercase
   IMAGE_TAG: ${{ github.sha }}           # Use git commit SHA as unique image tag
 
 jobs:
@@ -42,6 +41,14 @@ jobs:
       # Step 1: Fetch the repository code
       - name: Checkout code
         uses: actions/checkout@v4
+
+      # Step 1b: Set lowercase image name
+      - name: Set lowercase image name
+        id: image-name
+        run: |
+          IMAGE_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          echo "name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
       # Step 2: Set up Docker Buildx for advanced multi-stage builds with caching
       - name: Set up Docker Buildx
