--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -184,7 +184,8 @@ jobs:
   qa-testing:
     name: QA Testing (Automated + Contract)
     runs-on: ubuntu-latest
-    needs: build              # Waits for build job
+    needs: build     
+             # Waits for build job
     # Only run on PRs or develop branch pushes
 
     steps:
