--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -71,12 +71,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to ACR
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ needs.setup.outputs.acr-username }}
-          password: ${{ needs.setup.outputs.acr-password }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Build and push Iron Image
         uses: docker/build-push-action@v5
@@ -101,12 +105,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to ACR
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ needs.setup.outputs.acr-username }}
-          password: ${{ needs.setup.outputs.acr-password }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Build and push Bronze Image
         uses: docker/build-push-action@v5
@@ -131,12 +139,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to ACR
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ needs.setup.outputs.acr-username }}
-          password: ${{ needs.setup.outputs.acr-password }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Build and push Silver Image
         uses: docker/build-push-action@v5
@@ -161,12 +173,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to ACR
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ needs.setup.outputs.acr-username }}
-          password: ${{ needs.setup.outputs.acr-password }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Build and push Gold Image
         uses: docker/build-push-action@v5
@@ -193,12 +209,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to ACR
-        uses: docker/login-action@v3
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          registry: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ needs.setup.outputs.acr-username }}
-          password: ${{ needs.setup.outputs.acr-password }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get ACR credentials and login
+        run: |
+          ACR_USERNAME=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query username)
+          ACR_PASSWORD=$(az acr credential show -n ${{ secrets.ACR_NAME }} -o tsv --query passwords[0].value)
+          echo $ACR_PASSWORD | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u $ACR_USERNAME --password-stdin
 
       - name: Build and push Platinum Image
         uses: docker/build-push-action@v5
